--- a/manifest.json
+++ b/manifest.json
@@ -5,22 +5,25 @@
     {
       "src": "logo.svg",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/svg+xml"
+      "type": "image/svg+xml",
+      "purpose": "any"
     },
     {
-      "src": "logo.svg",
+      "src": "logo-white.svg",
       "type": "image/svg+xml",
-      "sizes": "192x192"
+      "sizes": "192x192",
+      "purpose": "any"
     },
     {
-      "src": "logo.svg",
+      "src": "logo-white.svg",
       "type": "image/svg+xml",
-      "sizes": "512x512"
+      "sizes": "512x512",
+      "purpose": "any"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#234b94",
+  "background_color": "#000000",
   "orientation": "any"
 }
