--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://filippp0.github.io/react-mesto-auth/",
+  "homepage": "https://filippp0.github.io/react-mesto-auth/#",
   "name": "mesto-react",
   "version": "0.1.0",
   "private": true,
